fix scrollbars on popup

--- a/app/assets/stylesheets/popup.scss
+++ b/app/assets/stylesheets/popup.scss
@@ -64,7 +64,7 @@
     background-color: $base-background-color;
     cursor: default;
     position: fixed;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .popup-form {
